quick fix for edit mode whitespace

--- a/shared/js/cyph/components/account-profile/account-profile.component.scss
+++ b/shared/js/cyph/components/account-profile/account-profile.component.scss
@@ -80,6 +80,50 @@ $header-size: 135px;
 		font-weight: 500;
 	}
 
+	mat-form-field.name ::ng-deep {
+		width: 50% !important;
+		margin-left: auto;
+		margin-right: auto;
+
+		input {
+			font-family: Ubuntu;
+			font-weight: 500;
+			border-bottom: 1px solid #777;
+			font-size: 42px;
+			padding-bottom: 10px;
+		}
+		.mat-form-field-infix {
+			padding: 20px 0 0 0 !important;
+			border-top: 0 !important;
+		}
+		.mat-form-field-underline {
+			display: none !important;
+		}
+		.mat-form-field-wrapper {
+			padding-bottom: 0;
+		}
+	}
+	
+
+	mat-form-field.description ::ng-deep {
+		top: -50px;
+		width: 50% !important;
+		margin-left: auto;
+		margin-right: auto;
+
+		textarea {
+			text-align: center;
+			font-family: Ubuntu;
+			font-weight: 300;
+			font-size: 20px;
+			height: 1.5em;
+		}
+		.mat-form-field-infix {
+			padding: 0;
+		}
+	}
+
+
 	.username {
 		font-size: 24px;
 		opacity: 0.6;
